--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:coverage": "jest --coverage --detectOpenHandles --forceExit"
   },
   "dependencies": {
+    "@upstash/redis": "^1.35.8",
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
   },
@@ -18,8 +19,13 @@
     "jest": "^29.7.0",
     "socket.io-client": "^4.7.2"
   },
-  "keywords": ["auction", "game", "programmatic", "dsp", "real-time"],
+  "keywords": [
+    "auction",
+    "game",
+    "programmatic",
+    "dsp",
+    "real-time"
+  ],
   "author": "",
   "license": "MIT"
 }
-
