--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@upstash/redis": "^1.35.8",
     "compression": "^1.8.1",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "helmet": "^8.1.0",
     "socket.io": "^4.7.2"
