Add CI via Render build step - tests must pass to deploy
- Update render.yaml: buildCommand runs npm test before deploy
- Update healthCheckPath to /health
- Update README with testing documentation
- Deployment fails if any of 125+ tests fail

--- a/render.yaml
+++ b/render.yaml
@@ -2,13 +2,13 @@ services:
   - type: web
     name: click-auction
     runtime: node
-    buildCommand: npm install
+    buildCommand: npm ci && npm test
     startCommand: node server.js
     envVars:
       - key: NODE_ENV
         value: production
       - key: BASE_URL
         sync: false  # Set this manually in Render dashboard after deploy
-    healthCheckPath: /api/config
+    healthCheckPath: /health
 
 
