--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js",
     "test": "jest --detectOpenHandles --forceExit",
     "test:watch": "jest --watch --detectOpenHandles",
-    "test:coverage": "jest --coverage --detectOpenHandles --forceExit"
+    "test:coverage": "jest --coverage --detectOpenHandles --forceExit",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@upstash/redis": "^1.35.8",
@@ -20,6 +21,7 @@
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
+    "eslint": "^9.39.2",
     "jest": "^29.7.0",
     "socket.io-client": "^4.7.2"
   },
