chore: Cleanup and properly enable minification
- Remove haptics from README (feature removed)
- Remove Haptics from build script reserved words
- Fix minification: HTML now uses minified files from /js/dist/
- Add build step to Render deploy
- Commit minified files (removed dist/ from gitignore)

This reduces JS payload by ~40% in production.

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ npm-debug.log*
 .env.local
 
 # Build artifacts
-dist/
 build/
+# Note: public/js/dist/ is NOT ignored - we commit minified files
 
 
