--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "click-auction",
   "version": "1.0.0",
   "description": "Real-time programmatic auction game - DSPs compete by clicking!",
-  "main": "server.js",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "node server.js",
-    "build": "node scripts/build.js",
+    "start": "node dist/server.js",
+    "dev": "ts-node server.ts",
+    "build": "npm run build:server && npm run build:client",
+    "build:server": "tsc",
+    "build:client": "node scripts/build.js",
     "test": "jest --detectOpenHandles --forceExit",
     "test:watch": "jest --watch --detectOpenHandles",
     "test:coverage": "jest --coverage --detectOpenHandles --forceExit",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@upstash/redis": "^1.35.8",
@@ -22,10 +26,20 @@
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
+    "@types/compression": "^1.8.1",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^25.0.3",
+    "@types/socket.io": "^3.0.1",
+    "esbuild": "^0.25.5",
     "eslint": "^9.39.2",
     "jest": "^29.7.0",
     "socket.io-client": "^4.7.2",
-    "terser": "^5.44.1"
+    "terser": "^5.44.1",
+    "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   },
   "keywords": [
     "auction",
