--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: click-auction
     runtime: node
     buildCommand: npm ci && npm test && npm run build
-    startCommand: node server.js
+    startCommand: node dist/server.js
     envVars:
       - key: NODE_ENV
         value: production
