--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "ts-node server.ts",
-    "build": "npm run build:server && npm run build:client",
-    "build:server": "tsc",
-    "build:client": "node scripts/build.js",
+    "build": "tsc",
     "test": "jest --detectOpenHandles --forceExit",
     "test:watch": "jest --watch --detectOpenHandles",
     "test:coverage": "jest --coverage --detectOpenHandles --forceExit",
@@ -32,11 +30,9 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^25.0.3",
     "@types/socket.io": "^3.0.1",
-    "esbuild": "^0.25.5",
     "eslint": "^9.39.2",
     "jest": "^29.7.0",
     "socket.io-client": "^4.7.2",
-    "terser": "^5.44.1",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
