--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "click-auction",
   "version": "1.0.0",
   "description": "Real-time programmatic auction game - DSPs compete by clicking!",
-  "main": "server.ts",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "ts-node server.ts",
-    "build": "tsc",
+    "start": "npm run build:client && ts-node server.ts",
+    "build": "npm run build:client && tsc",
+    "build:client": "vite build",
     "test": "jest --detectOpenHandles --forceExit",
     "lint": "eslint ."
   },
@@ -16,7 +17,8 @@
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "helmet": "^8.1.0",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/compression": "^1.8.1",
@@ -27,10 +29,10 @@
     "@types/socket.io": "^3.0.1",
     "eslint": "^9.39.2",
     "jest": "^29.7.0",
-    "socket.io-client": "^4.7.2",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vite": "^6.4.1"
   },
   "keywords": [
     "auction",
