--- a/render.yaml
+++ b/render.yaml
@@ -2,13 +2,15 @@ services:
   - type: web
     name: click-auction
     runtime: node
+    plan: starter  # REQUIRED for 200 players - free tier will crash!
     buildCommand: npm ci && npm test && npm run build
-    startCommand: npm start
+    startCommand: node --max-old-space-size=512 dist/index.js
     envVars:
       - key: NODE_ENV
         value: production
       - key: BASE_URL
         sync: false  # Set this manually in Render dashboard after deploy
     healthCheckPath: /health
+    # For 200 players, consider upgrading to "standard" plan for more resources
 
 
